Fixed z-index issue for feature links/dropdown issues

--- a/style.css
+++ b/style.css
@@ -104,8 +104,8 @@ body {background-color:#fcf5e0;background-image:none;}
 .search-submit {position:relative;top:-5px;}
 /* Header */
 
-#header {padding-bottom:0;border-bottom:0;margin-top:30px;}
-.ie7 #header {margin-bottom:20px;}
+#header {padding-bottom:0;border-bottom:0;margin-top:30px;position:relative;z-index:9999;}
+/*.ie7 #header {margin-bottom:20px;}*/
 h1 > a {color:#cfa115 !important;font-size:45px !important;font-family:"League Gothic",sans-serif;letter-spacing:1px;font-weight:normal !important;}
 #header-menu {position: relative;top:8px;}
 #header-menu a {color:#030303;font-weight:200;font-size:15px;}
@@ -117,14 +117,14 @@ h1 > a {color:#cfa115 !important;font-size:45px !important;font-family:"League G
 #header-menu a.dropdown-toggle .caret {border-top-color:#000;opacity:.5;filter: alpha(opacity=50);}
 
 /* Centerpiece */
-#centerpiece {position:relative;z-index:-1;}
+#centerpiece {position:relative;}
 #centerpiece .shoutout {position:absolute;color:#FFF;}
 #centerpiece .shoutout.top {top:25px;left:25px;}
 #centerpiece .shoutout.left {top:120px;left:50px;}
 #centerpiece .shoutout.center {top:120px;left:300px;}
 #centerpiece .shoutout.bottom {top:270px;left:50px;}
-#centerpiece .shoutout .title {font-weight:bold;display:block;font-size:35px;}
-#centerpiece .shoutout p {display:block;font-style:italic;font-size:16px;font-weight:200;margin-top:10px;line-height:1.4em;letter-spacing:1.5px;}
+#centerpiece .shoutout .title {font-weight:bold;display:block;font-size:35px;line-height:35px;}
+#centerpiece .shoutout p {display:block;font-style:italic;font-size:16px;font-weight:200;margin-top:10px;letter-spacing:1.5px;}
 
 #features {padding:0;margin:0;position:relative;top:-30px;width:960px;}
 #features li {list-style-type:none;float:left;width:187px;background:#fcf5e0 url('static/img/feature-gradient.png') no-repeat top center;padding-top:7px;margin-left:8px;}
